--- a/index.html
+++ b/index.html
@@ -77,13 +77,19 @@
         <!-- Overlay com texto -->
         <div class="absolute inset-0 bg-gradient-to-r from-black/75 via-black/45 to-transparent flex items-center">
           <div class="p-6 md:p-10 max-w-xl">
+            <!-- ✅ BLOCO ATUALIZADO -->
             <h2 class="text-2xl md:text-4xl font-extrabold text-white">
-              Saúde reprodutiva como eixo integrador do envelhecimento saudável
+              Regulação Neuroendócrina: O eixo integrador do envelhecimento
             </h2>
             <p class="mt-3 text-white/85 text-sm md:text-base leading-relaxed">
-              Educação, ciência e direitos da pessoa idosa reunidos de forma acessível para apoiar autonomia,
-              bem-estar, prevenção e envelhecimento ativo.
+              O sistema reprodutor atua como modulador biológico central, conectando a saúde neurológica,
+              metabólica e a proteção jurídica da pessoa idosa.
             </p>
+
+            <div class="mt-4 inline-flex items-center gap-2 text-xs font-semibold px-3 py-1 rounded-full bg-white/10 border border-white/15">
+              <span>🧠🧬</span>
+              <span>neuroendócrino • funcionalidade • autonomia • direitos</span>
+            </div>
           </div>
         </div>
       </div>
@@ -189,6 +195,28 @@
       </div>
 
       <div class="grid md:grid-cols-2 gap-4">
+
+        <!-- ✅ NOVO Card (Cerne Biológico: Eixo Neuroendócrino) -->
+        <article class="card interactive" data-accordion>
+          <button class="card-head" type="button">
+            <div class="flex items-center gap-3">
+              <div class="badgeIcon">🧬</div>
+              <div>
+                <div class="card-title">Cerne Biológico: Eixo Neuroendócrino</div>
+                <div class="card-sub">por que este é o “ponto de partida” do projeto</div>
+              </div>
+            </div>
+            <span class="chev">⌄</span>
+          </button>
+          <div class="card-body">
+            <p class="text-white/80 leading-relaxed">
+              A saúde reprodutiva regula o metabolismo sistêmico e a neuroplasticidade por meio do eixo
+              <strong>hipotálamo-hipófise</strong>. Alterações nesse núcleo repercutem em sono, humor, apetite,
+              inflamação, saúde óssea e integridade do sistema nervoso — ajudando a compreender o envelhecimento
+              de forma global e organizada.
+            </p>
+          </div>
+        </article>
 
         <!-- Card 1 -->
         <article class="card interactive" data-accordion>
@@ -378,6 +406,31 @@
               📌 A Verena reforça direitos e orienta sobre caminhos de busca de ajuda quando há risco,
               sempre em caráter educativo.
             </p>
+          </div>
+        </article>
+
+        <!-- ✅ NOVO Card (Iniciação Científica e Pesquisa) -->
+        <article class="card interactive md:col-span-2 border-dashed border-teal-500/50" data-accordion>
+          <button class="card-head" type="button">
+            <div class="flex items-center gap-3">
+              <div class="badgeIcon text-teal-400">🔬</div>
+              <div>
+                <div class="card-title">Iniciação Científica e Pesquisa</div>
+                <div class="card-sub">cronograma e validação acadêmica</div>
+              </div>
+            </div>
+            <span class="chev">⌄</span>
+          </button>
+          <div class="card-body">
+            <p class="text-white/80 leading-relaxed">
+              A Verena integra projetos de <strong>Iniciação Científica (PIC)</strong> com início em Março de 2026.
+              As interações e protocolos podem ser validados por pesquisadores da área da saúde para garantir
+              rigor científico e ética no cuidado.
+            </p>
+            <div class="mt-3 flex flex-wrap gap-2">
+              <span class="px-2 py-1 bg-teal-500/20 text-teal-300 text-[10px] rounded uppercase font-bold tracking-wider">Protótipo Alfa</span>
+              <span class="px-2 py-1 bg-blue-500/20 text-blue-300 text-[10px] rounded uppercase font-bold tracking-wider">PIC Março/2026</span>
+            </div>
           </div>
         </article>
 
