--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               Regulação Neuroendócrina: O eixo integrador do envelhecimento
             </h2>
             <p class="mt-3 text-white/85 text-sm md:text-base leading-relaxed">
-              O sistema reprodutor atua como modulador biológico central, conectando a saúde neurológica,
+              O aparelho reprodutor atua como modulador biológico central, conectando a saúde neurológica,
               metabólica e a proteção jurídica da pessoa idosa.
             </p>
 
@@ -764,3 +764,4 @@
   </script>
 </body>
 </html>
+
